--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,9 @@
 body{
     overflow-x:hidden;
 }
+.header{text-align: center;
+color:rgb(56, 155, 221);
+background-color: honeydew;}
 nav{
     width:80%;
     margin-left: auto;
@@ -37,7 +40,13 @@ img{
 .bi{
     color:blue;
 }
-
+.card{
+    opacity: 0.7;
+    margin:5px;
+}
+.card:hover{
+    opacity:1;
+}
 .cardbox{
    
    text-align: center;
@@ -60,6 +69,7 @@ img{
     color:rgb(231, 236, 236);
     text-align: center;
 }
+
 .playstore{
     background-color: grey;
     
@@ -67,16 +77,20 @@ img{
     width:100vw;
 
 }
+.head{
+    text-align: center;
+}
 .bottom{
     float:right;
     background-color: grey;
     color: whitesmoke;
+    margin-right: 20px;
 }
 
 .b{
     text-align: center;
-    height:30%;
-    width:60%;
+    height:100vh;
+    width:100vh;
     margin-left: auto;
     margin-right: auto;
     background-color: cornsilk;
